# hummingbird

./: .env  .gitignore  README.md  pyproject.toml  requirements.txt  start.sh  stop.sh
backend/: app.py  routes.py  spiderplot.csv  utils.py
frontend/: .env  index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.css  App.jsx
frontend/src/components/: Navigation.css  Navigation.jsx  SpiderPlot.css  SpiderPlot.jsx  StatsCards.css  StatsCards.jsx
frontend/src/pages/: LandingPage.jsx  SpiderPlotPage.jsx
